--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "email-validator": "^1.0.7",
     "express": "^4.13.4",
     "mongodb": "^2.1.16",
+    "nodemailer": "2.6.4",
+    "nodemailer-smtp-transport": "^2.7.4",
     "path": "^0.12.7"
   }
 }
